# docs/swagger.yaml
@@ -151,7 +151,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Get all model
+      description: Get all models
       produces:
       - application/json
       responses:
@@ -290,4 +290,74 @@ paths:
       summary: GetById
       tags:
       - API
+  /api/models/cache:
+    get:
+      consumes:
+      - application/json
+      description: Get all models
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Model'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: GetAll
+      tags:
+      - Cache
+  /api/models/cache/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get model by order_uid
+      parameters:
+      - description: order_uid
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Model'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: GetById
+      tags:
+      - Cache
 swagger: "2.0"
