# pkg/handler/model.go
@@ -41,7 +41,7 @@ func (h *Handler) createModel(c *gin.Context) {
 
 // @Summary GetAll
 // @Tags API
-// @Description Get all model
+// @Description Get all models
 // @Accept json
 // @Produce json
 // @Success 200 {object} []models.Model
@@ -51,6 +51,28 @@ func (h *Handler) createModel(c *gin.Context) {
 // @Router /api/models [get]
 func (h *Handler) getAllModels(c *gin.Context) {
 	models, err := h.services.GetAll()
+	if err != nil {
+		newErrorResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	c.JSON(http.StatusOK, getAllModelResponse{
+		Data: models,
+	})
+}
+
+// @Summary GetAll
+// @Tags Cache
+// @Description Get all models
+// @Accept json
+// @Produce json
+// @Success 200 {object} []models.Model
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/models/cache [get]
+func (h *Handler) getAllModelsFromCache(c *gin.Context) {
+	models, err := h.services.GetAllFromCache()
 	if err != nil {
 		newErrorResponse(c, http.StatusInternalServerError, err.Error())
 		return
@@ -80,6 +102,33 @@ func (h *Handler) getModelById(c *gin.Context) {
 	}
 
 	model, err := h.services.Model.GetById(modelId)
+	if err != nil {
+		newErrorResponse(c, http.StatusInternalServerError, err.Error())
+		return 
+	}
+
+	c.JSON(http.StatusOK, model)
+}
+
+// @Summary GetById
+// @Tags Cache
+// @Description Get model by order_uid
+// @Accept json
+// @Produce json
+// @Param id path string true "order_uid"
+// @Success 200 {object} models.Model
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/models/cache/{id} [get]
+func (h *Handler) getModelFromCacheById(c *gin.Context) {
+	modelId := c.Param("id")
+	if modelId == "" {
+		newErrorResponse(c, http.StatusBadRequest, "invalid param")
+		return
+	}
+
+	model, err := h.services.GetModelFromCacheById(modelId)
 	if err != nil {
 		newErrorResponse(c, http.StatusInternalServerError, err.Error())
 		return 
